--- a/Css/style.css
+++ b/Css/style.css
@@ -1,4 +1,3 @@
-
 header{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -6,14 +5,11 @@ header{
     font-weight: bolder;
     font-style: italic;
 }
-.menudesplegable{
-display: flex;
-flex-direction: row;
-justify-content: space-evenly;
-width: auto;
-height: auto;
-margin-top: 20px;
-margin-bottom: 20px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif
 }
 .home{
     text-align: left;
@@ -47,8 +43,9 @@ margin-bottom: 20px;
     margin-bottom: 20px;
 }
 body{
+    background-color: black;
     background: black;
-    color: white;
+    color:white;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 30px;
@@ -166,10 +163,32 @@ p{
         width: 200px;
         height: auto;
     }
+    .formulariobasico{
+        margin-left: 30px;
+    }
+    body{
+        background-color: black;
+        color: white;
+    }
 }
 @media (min-width:1024px) {
     .pintores{
         display: grid;
         grid-template-columns: 50% 50%;
     }
+    .formulariobasico{
+        margin-left: 30px;
+    }
+    body{
+        background-color: black;
+        color: white;
+    }
+}
+.d-block{
+    width: 400px;
+    height: 500px;
+    margin: 0 auto;
+}
+.carousel{
+    margin: 20px;
 }
