--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ p{
     align-items: center;
     row-gap: 20px;
 }
+.contemporaneo{
+    text-align: center;
+}
 .formulariobasico{
     display: flex;
     flex-direction: column;
